2011-11-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-3; -> CRAN
	* NAMESPACE: added
	* R/aaa.R: no longer needed

2009-12-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, License): 0.8-2;  use standardized License

	* tests/ex.Rout.save: (cosmetic update)

2004-11-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1; -> CRAN

	* R/plug-density.R (plugin.density): add 'na.rm' argument

