@@ -1,6 +1,6 @@
 Package: plugdensity
 Version: 0.8-4
-Date: 2022-02-20
+Date: 2022-02-21
 Title: Plug-in Kernel Density Estimation
 Author: Eva Herrmann <eherrmann@mathematik.tu-darmstadt.de> (C original);
 	R interface etc by Martin Maechler
