@@ -1,1 +1,4 @@
+double plugin_h(double *x, R_xlen_t nx);
+SEXP h_pluginEH(SEXP x_);
+
 void plugin_dens(double *x, int *n, double *z, int *m, double *f, double *h);
