@@ -1,7 +1,7 @@
 
-R version 2.11.0 Under development (unstable) (2009-12-03 r50653)
-Copyright (C) 2009 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
+R version 4.1.2 Patched (2022-02-19 r81767) -- "Bird Hippie"
+Copyright (C) 2022 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -63,3 +63,42 @@ List of 2
 [193]   5.437551   4.463399   3.626153   2.914392   2.316229   1.819632
 [199]   1.412491   1.082946   0.819937
 > 
+> data(co2)
+> (pd.co2 <- plugin.density(co2))
+EvaHerrmann plugin density estimate
+ call : plugin.density(x = co2) 
+ n =  468  ;  estimated (Gaussian) bandwidth h =  2.76466 
+List of 2
+ $ x: num [1:201] 307.814 308.136 308.458 308.78 309.102 ...
+ $ y: num [1:201] 0.000281426 0.000372771 0.000488529 0.000633515 0.000813032 ...
+> 
+> ## Add one outlier to co2, move it to Inf --- bw.EH() is quite *robust*
+> xOs <- c(max(co2), 370+ 2^c(0:8, 16*(1:6)), Inf)
+> bwOs <- vapply(xOs, function(xo) bw.EH( c(co2, xo)), 0.1)
+> bwOm <- vapply(xOs, function(xo) bw.EH(-c(co2, xo)), 0.1)
+> cbind(xOs, bwOs, D = bwOs - bwOs[length(xOs)], bwOm)
+              xOs    bwOs            D    bwOm
+ [1,] 3.66840e+02 2.77391  8.09856e-03 2.77311
+ [2,] 3.71000e+02 2.77250  6.69337e-03 2.77170
+ [3,] 3.72000e+02 2.77010  4.29200e-03 2.76930
+ [4,] 3.74000e+02 2.76576 -5.04374e-05 2.76496
+ [5,] 3.78000e+02 2.76330 -2.51013e-03 2.76250
+ [6,] 3.86000e+02 2.76517 -6.38544e-04 2.76438
+ [7,] 4.02000e+02 2.76600  1.92396e-04 2.76521
+ [8,] 4.34000e+02 2.76581  3.02989e-07 2.76501
+ [9,] 4.98000e+02 2.76581  0.00000e+00 2.76501
+[10,] 6.26000e+02 2.76581  0.00000e+00 2.76501
+[11,] 6.59060e+04 2.76581  0.00000e+00 2.76501
+[12,] 4.29497e+09 2.76581  0.00000e+00 2.76501
+[13,] 2.81475e+14 2.76581  0.00000e+00 2.76501
+[14,] 1.84467e+19 2.76581  0.00000e+00 2.76501
+[15,] 1.20893e+24 2.76581  0.00000e+00 2.76501
+[16,] 7.92282e+28 2.76581  0.00000e+00 2.76501
+[17,]         Inf 2.76581  0.00000e+00 2.76501
+> plot(bwOs ~ xOs, log="x", type="b")
+> plot (bwOs ~ xOs, log="x", type="b", subset = xOs < 4e4)
+> lines(bwOm ~ xOs, col=2, type="b")
+> 
+> proc.time()
+   user  system elapsed 
+  0.317   0.026   0.336 
